# python-pdf-reader

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
python_pdf_reader/: read_summary_layout.ipynb  read_tabular_pdf.ipynb
script/: download_dataset.sh  download_tabular_pdf.sh
