[tool.poetry]
name = "python-pdf-reader"
version = "0.1.0"
description = "Example code for reading pdf with python"
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tabula-py = "^2.8.2"
ipykernel = "^6.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
